feat(server): configure package uploads and improve API token UX
